key projects demo sections

--- a/index.html
+++ b/index.html
@@ -143,29 +143,153 @@
         </div>
     </section>
     <!-- statistics -->
-    <section class="stats">
+    <!-- <section class="stats">
         <div class="container">
             <p class="statistics_head">Today, we are at...</p>
             <div class="stats_cards">
-                <!-- stat card -->
+                <!-- stat card
                 <div class="stat_card">
                     <p class="stat_number">30</p>
                     <p class="stat_desc">clients</p>
                 </div>
-                <!-- stat card -->
+                <!-- stat card
                 <div class="stat_card">
                     <p class="stat_number">26</p>
                     <p class="stat_desc">projects delivered</p>
                 </div>
-                <!-- stat card -->
+                <!-- stat card
                 <div class="stat_card">
                     <p class="stat_number">5</p>
                     <p class="stat_desc">years of experience</p>
                 </div>
-                <!-- stat card -->
+                <!-- stat card
                 <div class="stat_card">
                     <p class="stat_number">94%</p>
                     <p class="stat_desc">client retention</p>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- key projects -->
+    <section class="key_projects">
+        <div class="container">
+            <p class="key_projects_head">Key Projects</p>
+            <div class="key_projects_wrap">
+                <!-- key project -->
+                <div class="key_project">
+                    <div class="key_project_left">
+                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
+                        <div class="mini_photos">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                        </div>
+                    </div>
+                    <div class="key_project_right">
+                        <p class="key_project_name">Project Name</p>
+                        <p class="key_project_time">Nov 2023</p>
+                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
+                    </div>
+                </div>
+                <!-- key project -->
+                <div class="key_project">
+                    <div class="key_project_left">
+                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
+                        <div class="mini_photos">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                        </div>
+                    </div>
+                    <div class="key_project_right v2_project_right">
+                        <p class="key_project_name">Project Name</p>
+                        <p class="key_project_time ">Nov 2023</p>
+                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
+                    </div>
+                </div>
+                <!-- key project -->
+                <div class="key_project">
+                    <div class="key_project_left">
+                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
+                        <div class="mini_photos">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                        </div>
+                    </div>
+                    <div class="key_project_right">
+                        <p class="key_project_name">Project Name</p>
+                        <p class="key_project_time">Nov 2023</p>
+                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
+                        <div class="key_points">
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">grade</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">data_check</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">right_click</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="key_project">
+                    <div class="key_project_left">
+                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
+                        <div class="mini_photos">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                        </div>
+                    </div>
+                    <div class="key_project_right">
+                        <p class="key_project_name">Project Name</p>
+                        <p class="key_project_time">Nov 2023</p>
+                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
+                        <div class="key_points v2_key_points">
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">grade</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">data_check</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">right_click</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">app_badging</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">key_vertical</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                            </div>
+                            <!-- key_point -->
+                            <div class="key_point">
+                                <span class="material-symbols-outlined">settings_heart</span>
+                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
