key proj scroll, category card speed

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <header>
         <div class="container header_container">
             <!-- logo -->
-            <div class="logo_wrap">
+            <a href="index.html" class="logo_wrap">
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
-            </div>
+            </a>
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
-                <!-- <a href="portfolio.html" class="nav_links">Key Projects</a> -->
+                <a class="nav_links nav_key_projects">Key Projects</a>
                 <a class="nav_links nav_industries">Industries</a>
-                <a href="about.html" class="nav_links">About</a>
+                <a class="nav_links">About</a>
             </div>
             <!-- header cta -->
             <div class="call_cta_wrap">
@@ -171,7 +171,7 @@
         </div>
     </section> -->
     <!-- key projects -->
-    <section class="key_projects">
+    <section class="key_projects" id="keyProjects">
         <div class="container">
             <p class="key_projects_head">Key Projects</p>
             <div class="key_projects_wrap">
