--- a/landscape.html
+++ b/landscape.html
@@ -19,16 +19,16 @@
     <header class="category_head">
         <div class="container header_container">
             <!-- logo -->
-            <div class="logo_wrap">
+            <a href="index.html" class="logo_wrap">
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
-            </div>
+            </a>
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
-                <a href="portfolio.html" class="nav_links">Key Projects</a>
+                <a href="index.html#keyProjects" class="nav_links">Key Projects</a>
                 <a href="index.html#industries" class="nav_links nav_industries">Industries</a>
-                <a href="about.html" class="nav_links">About</a>
+                <a class="nav_links">About</a>
             </div>
             <!-- header cta -->
             <div class="call_cta_wrap">
@@ -36,18 +36,21 @@
             </div>
         </div>
     </header>
+    <!-- left name -->
     <div class="category_name_wrap">
         <p class="category_name category_project_head">Landscape</p>
     </div>
+    <!-- right name -->
     <div class="project_head_wrap">
         <p class="project_head category_project_head">Projects</p>
     </div>
+    <!-- project cards -->
     <div class="container project_cards_wrap">
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -59,7 +62,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -71,7 +74,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -83,7 +86,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -95,7 +98,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -107,7 +110,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -119,7 +122,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -131,7 +134,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -143,7 +146,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -155,7 +158,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -167,7 +170,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
@@ -179,7 +182,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                    <img src="assets/landscape_projects/landscape_project_card.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Project Name</p>
