key projects options changes

--- a/index.html
+++ b/index.html
@@ -194,19 +194,13 @@
                 </div>
                 <!-- key project -->
                 <div class="key_project">
-                    <div class="key_project_left">
-                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
-                        <div class="mini_photos">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                        </div>
-                    </div>
                     <div class="key_project_right v2_project_right">
                         <p class="key_project_name">Project Name</p>
-                        <p class="key_project_time ">Nov 2023</p>
+                        <p class="key_project_time ">Nov 2023, Location</p>
                         <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
+                    </div>
+                    <div class="key_project_left">
+                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
                     </div>
                 </div>
                 <!-- key project -->
@@ -244,18 +238,9 @@
                     </div>
                 </div>
                 <div class="key_project">
-                    <div class="key_project_left">
-                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
-                        <div class="mini_photos">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                        </div>
-                    </div>
                     <div class="key_project_right">
                         <p class="key_project_name">Project Name</p>
-                        <p class="key_project_time">Nov 2023</p>
+                        <p class="key_project_time">Nov 2023, Location</p>
                         <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
                         <div class="key_points v2_key_points">
                             <!-- key_point -->
@@ -289,6 +274,9 @@
                                 <p class="key_point_desc">Lorem ipsum dolor sit.</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="key_project_left">
+                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
                     </div>
                 </div>
             </div>
