--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- key project -->
                 <div class="key_project">
                     <div class="key_project_right">
                         <p class="key_project_name">Project Name</p>
@@ -278,6 +279,50 @@
                     <div class="key_project_left">
                         <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- clients -->
+    <section class="clients">
+        <div class="container">
+            <p class="client_head">they trust our work, so can you!</p>
+            <div class="clients_wrap">
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
+                </div>
+                <!-- client -->
+                <div class="client">
+                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
                 </div>
             </div>
         </div>
