--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- google icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="main.css">
     <title>EN+AD</title>
 </head>
 <body>
+
     <!-- header -->
     <header>
         <div class="container header_container">
@@ -177,107 +178,46 @@
             <div class="key_projects_wrap">
                 <!-- key project -->
                 <div class="key_project">
-                    <div class="key_project_left">
-                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
-                        <div class="mini_photos">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                        </div>
-                    </div>
                     <div class="key_project_right">
                         <p class="key_project_name">Project Name</p>
-                        <p class="key_project_time">Nov 2023</p>
-                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
-                    </div>
-                </div>
-                <!-- key project -->
-                <div class="key_project">
-                    <div class="key_project_right v2_project_right">
-                        <p class="key_project_name">Project Name</p>
-                        <p class="key_project_time ">Nov 2023, Location</p>
-                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
-                    </div>
-                    <div class="key_project_left">
-                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
-                    </div>
-                </div>
-                <!-- key project -->
-                <div class="key_project">
-                    <div class="key_project_left">
-                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
-                        <div class="mini_photos">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
-                        </div>
-                    </div>
-                    <div class="key_project_right">
-                        <p class="key_project_name">Project Name</p>
-                        <p class="key_project_time">Nov 2023</p>
-                        <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
-                        <div class="key_points">
-                            <!-- key_point -->
-                            <div class="key_point">
-                                <span class="material-symbols-outlined">grade</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit amet.</p>
-                            </div>
-                            <!-- key_point -->
-                            <div class="key_point">
-                                <span class="material-symbols-outlined">data_check</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit amet.</p>
-                            </div>
-                            <!-- key_point -->
-                            <div class="key_point">
-                                <span class="material-symbols-outlined">right_click</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit amet.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- key project -->
-                <div class="key_project">
-                    <div class="key_project_right">
-                        <p class="key_project_name">Project Name</p>
-                        <p class="key_project_time">Nov 2023, Location</p>
+                        <p class="key_project_time">month year, location</p>
                         <p class="key_project_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi cumque libero magni quaerat aspernatur, ullam porro similique blanditiis nam?</p>
                         <div class="key_points v2_key_points">
                             <!-- key_point -->
                             <div class="key_point">
-                                <span class="material-symbols-outlined">grade</span>
+                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
                                 <p class="key_point_desc">Lorem ipsum dolor sit.</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
-                                <span class="material-symbols-outlined">data_check</span>
+                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
                                 <p class="key_point_desc">Lorem ipsum dolor sit.</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
-                                <span class="material-symbols-outlined">right_click</span>
+                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
                                 <p class="key_point_desc">Lorem ipsum dolor sit.</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
-                                <span class="material-symbols-outlined">app_badging</span>
+                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
                                 <p class="key_point_desc">Lorem ipsum dolor sit.</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
-                                <span class="material-symbols-outlined">key_vertical</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
-                            </div>
-                            <!-- key_point -->
-                            <div class="key_point">
-                                <span class="material-symbols-outlined">settings_heart</span>
+                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
                                 <p class="key_point_desc">Lorem ipsum dolor sit.</p>
                             </div>
                         </div>
                     </div>
                     <div class="key_project_left">
-                        <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="key_project_main_image" alt="">
+                        <img src="assets/key_projects/1_rg_36.jpeg" class="key_project_main_image" alt="">
+                        <!-- <div class="mini_photos">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                            <img src="assets/key_projects/key_project_1/key_project_1.jpeg" class="mini_photo" alt="">
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -338,6 +278,7 @@
             <p class="call_cta_text">Ruko zara, website toh banne do.</p>
         </div>
     </div>
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="main.js"></script>
 </body>
