industry sticky header

--- a/index.html
+++ b/index.html
@@ -679,17 +679,24 @@
             </div>
         </div>
     </section>
-    <!-- footer -->
-    <footer>
-        <p class="company_details">EN Architecture & Designs &copy;</p>
-        <p class="company_details">Borivali East, Mumbai</p>
-    </footer>
     <!-- call cta popup -->
     <div class="call_cta_popup">
         <div class="call_cta_container">
             <p class="call_cta_text">Ruko zara, website toh banne do.</p>
         </div>
     </div>
+    <!-- sticky industries header -->
+    <div class="sticky_industries">
+        <a class="sticky_industry">Architecture</a>
+        <a href="landscape.html" class="sticky_industry">Landscape</a>
+        <a class="sticky_industry">Interior</a>
+        <a class="sticky_industry">Hospitality / Healthcare Planning</a>
+    </div>
+    <!-- footer -->
+    <footer>
+        <p class="company_details">EN Architecture & Designs &copy;</p>
+        <p class="company_details">Borivali East, Mumbai</p>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="main.js"></script>
