--- a/landscape.html
+++ b/landscape.html
@@ -191,6 +191,12 @@
             </div>
         </div>
     </div>
+    <!-- call cta popup -->
+    <div class="call_cta_popup">
+        <div class="call_cta_container">
+            <p class="call_cta_text">Ruko zara, website toh banne do.</p>
+        </div>
+    </div>
     <script src="category.js"></script>
 </body>
 </html>
