--- a/index.html
+++ b/index.html
@@ -299,34 +299,25 @@
                     <div class="key_project_right">
                         <p class="key_project_name">Vivek Sewa Kendra</p>
                         <p class="key_project_time">Dadar (W), Completed</p>
-                        <p class="key_project_desc">Lorem ipsum dolor sit. Lorem ipsum dolor sit. Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
+                        <p class="key_project_desc">A dedicated NGO, focused on advancing skill development initiatives for tribal communities near MMR.</p>
 
                         <div class="key_points v2_key_points">
                             <!-- key_point -->
                             <div class="key_point">
                                 <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                                <p class="key_point_desc">traditional lifestyle preserved</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
                                 <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                                <p class="key_point_desc">future proof</p>
                             </div>
                             <!-- key_point -->
                             <div class="key_point">
                                 <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
+                                <p class="key_point_desc">rich cultural heritage</p>
                             </div>
-                            <!-- key_point -->
-                            <div class="key_point">
-                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
-                            </div>
-                            <!-- key_point -->
-                            <div class="key_point">
-                                <span class="material-symbols-outlined">keyboard_double_arrow_right</span>
-                                <p class="key_point_desc">Lorem ipsum dolor sit.</p>
-                            </div>
+                            
                         </div>
 
                     </div>
