--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>EN+AD</title>
 </head>
@@ -223,7 +223,7 @@
                 <div class="key_project">
 
                     <div class="key_project_right">
-                        <p class="key_project_name">House on the river edge</p>
+                        <p class="key_project_name"><span class="ongoing_project"></span>House on the river edge</p>
                         <p class="key_project_time">Vikramgadh, design proposal ongoing</p>
                         <p class="key_project_desc">A bespoke bungalow for sports enthusiasts. The design instigates an unique living experience where the integration of design and nature creates a distinctive experience.</p>
 
@@ -257,7 +257,7 @@
                 <div class="key_project">
 
                     <div class="key_project_right">
-                        <p class="key_project_name">66-Downtown</p>
+                        <p class="key_project_name"><span class="ongoing_project"></span>66-Downtown</p>
                         <p class="key_project_time">Borivali (E), Design proposal ongoing</p>
                         <p class="key_project_desc">A high-density Slum Rehabilitation Authority (SRA) utilitarian solution expertly created to foster community engagement and shared experiences.</p>
 
@@ -331,7 +331,7 @@
                 <div class="key_project">
 
                     <div class="key_project_right">
-                        <p class="key_project_name">Rakiya Hospital</p>
+                        <p class="key_project_name"><span class="ongoing_project"></span>Rakiya Hospital</p>
                         <p class="key_project_time">Nallasopara (W), Design/ MEP Consultants Ongoing</p>
                         <p class="key_project_desc">A state-of-an-art Orthopadeic facility center. We combined functionality and aesthetics to create an environment that fosters optimal healthcare and also aligns with the founder, Dr. F.Chinde's expert vision.</p>
 
