tabs functionality for industries

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- google icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- css -->
     <link rel="stylesheet" href="main.css">
     <title>EN+AD</title>
 </head>
@@ -37,19 +42,6 @@
             </div>
         </div>
     </header>
-    <!-- hero section -->
-    <!-- <section class="hero_wrap">
-        <div class="hero">
-            <div class="container hero_container">
-                <p class="pre_head" data-aos="fade-down">services</p>
-                <p class="hero_head" data-aos="fade-up">
-                    We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
-                </p>
-                <a class="hero_cta">Industries we serve</a>
-            </div>
-        </div>
-    </section> -->
-    <!-- hero section test -->
     <section class="hero_wrap">
         <div class="hero">
             <div class="container hero_container">
@@ -62,37 +54,6 @@
         </div>
     </section>
     <!-- industries -->
-    <!-- <section class="industries">
-        <div class="container">
-            <div class="industry_card_wrap">
-                <!-- industry card
-                <div class="industry_card" data-aos="zoom-in">
-                    <img src="assets/home_categories/landscape_v1.jpeg" class="industry_image" alt="">
-                    <div class="industry_overlay"></div>
-                    <p class="industry_name">landscape</p>
-                </div>
-                <!-- industry card
-                <div class="industry_card" data-aos="zoom-in" data-aos-delay="500">
-                    <img src="assets/home_categories/architecture_v1.jpeg" class="industry_image" alt="">
-                    <div class="industry_overlay"></div>
-                    <p class="industry_name">architecture</p>
-                </div>
-                <!-- industry card
-                <div class="industry_card" data-aos="zoom-in"data-aos-delay="1000">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="industry_image" alt="">
-                    <div class="industry_overlay"></div>
-                    <p class="industry_name">interiors</p>
-                </div>
-                <!-- industry card
-                <div class="industry_card" data-aos="zoom-in" data-aos-delay="1500">
-                    <img src="assets/home_categories/residential_v1.jpeg" class="industry_image" alt="">
-                    <div class="industry_overlay"></div>
-                    <p class="industry_name">residential</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- industries test -->
     <section class="industries" id="industries">
         <div class="container">
             <div class="industry_card_wrap">
@@ -101,7 +62,7 @@
                     <img src="assets/industries_cover/architecture.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">architecture</p>
-                    <a class="industry_cta">
+                    <a href="architecture.html" class="industry_cta">
                         <span class="material-symbols-outlined industry_cta_arrow">
                             arrow_forward
                         </span>
@@ -143,34 +104,6 @@
             </div>
         </div>
     </section>
-    <!-- statistics -->
-    <!-- <section class="stats">
-        <div class="container">
-            <p class="statistics_head">Today, we are at...</p>
-            <div class="stats_cards">
-                <!-- stat card
-                <div class="stat_card">
-                    <p class="stat_number">30</p>
-                    <p class="stat_desc">clients</p>
-                </div>
-                <!-- stat card
-                <div class="stat_card">
-                    <p class="stat_number">26</p>
-                    <p class="stat_desc">projects delivered</p>
-                </div>
-                <!-- stat card
-                <div class="stat_card">
-                    <p class="stat_number">5</p>
-                    <p class="stat_desc">years of experience</p>
-                </div>
-                <!-- stat card
-                <div class="stat_card">
-                    <p class="stat_number">94%</p>
-                    <p class="stat_desc">client retention</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <!-- key projects -->
     <section class="key_projects" id="keyProjects">
         <div class="container">
@@ -442,6 +375,14 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
+    <footer>
+        <p class="company_details">EN Architecture & Designs &copy;</p>
+        <p class="company_details">Borivali East, Mumbai</p>
+    </footer>
+    
+    <!-- ********************************************************* -->
+
     <!-- call cta popup -->
     <div class="call_cta_popup">
         <div class="call_cta_container">
@@ -450,18 +391,13 @@
     </div>
     <!-- sticky industries header -->
     <div class="sticky_industries">
-        <a class="sticky_industry">Architecture</a>
+        <a href="architecture.html" class="sticky_industry">Architecture</a>
         <a href="landscape.html" class="sticky_industry">Landscape</a>
         <a class="sticky_industry">Interior</a>
         <a class="sticky_industry">Hospitality / Healthcare Planning</a>
     </div>
-    <!-- footer -->
-    <footer>
-        <p class="company_details">EN Architecture & Designs &copy;</p>
-        <p class="company_details">Borivali East, Mumbai</p>
-    </footer>
 
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- ********************************************************* -->
     <script src="main.js"></script>
 </body>
 </html>
